--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html style="height: 100vh">
 <head>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
-  <script src="transfer.js"></script>
+    <title>Cumulonimbi Integration Test</title>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+    <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
+    <script src="transfer.js"></script>
+    <script>
+        $(function() {
+            $("#images_group").accordion({
+                collapsible: true,
+                heightStyle: "content",
+            });
+            $("#container_group").accordion({
+                collapsible: true,
+                heightStyle: "content",
+            });
+        });
+    </script>
 </head>
-<body style="height: 90vh">
+<body>
+<h1>Images</h1>
+<div id="images_group">
     <h3>Info</h3>
-    <div id="log" style="width: 100%; height: 90vh; overflow:auto; border: 1px solid black"></div>
+    <div id="images_info"></div>
+    <h3>Log</h3>
+    <div>
+        <p><pre><code id="images_log" style="width: 100%; overflow:auto; resize: none"></code></pre></p>
+    </div>
+</div>
+
+<h1>Containers</h1>
+<div id="container_group">
+    <h3>Info</h3>
+    <div id="containers_info"></div>
+    <h3>Log</h3>
+    <div>
+        <p><pre><code id="containers_log" style="width: 100%; overflow:auto; resize: none"></code></pre></p>
+    </div>
+</div>
+
 </body>
 </html>
